deploy/weaviate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: "Demo - Weaviate"
  labels:
    openshift.io/cluster-monitoring: 'true'
  name: weaviate
