deploy/weaviate/svc-grpc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weaviate-grpc
  labels:
    app.kubernetes.io/name: weaviate
spec:
  type: ClusterIP
  selector:
    app: weaviate
  ports:
    - name: grpc
      port: 50051
      protocol: TCP
      targetPort: 50051
