deploy/weaviate/svc-headless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weaviate-headless
  labels:
    app.kubernetes.io/name: weaviate
spec:
  type: ClusterIP
  selector:
    app: weaviate
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7000
