deploy/weaviate/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weaviate
  labels:
    app.kubernetes.io/name: weaviate
spec:
  type: ClusterIP
  selector:
    app: weaviate
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
