deploy/weaviate/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: weaviate
  name: weaviate
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: weaviate
    weight: 100
  wildcardPolicy: None
